datnd add email sender, done ignore migrations

--- a/FDex.Api/appsettings.json
+++ b/FDex.Api/appsettings.json
@@ -5,6 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "Account": "datndw@gmail.com", //TODO: replace with offical email of FDex
+    "Password": "mbcxfpyhbativytq"
+  },
+  "ConnectionStrings": {
+    "FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=Anhdat123;" // Dat connstr
+    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;" // Hung connstr
+    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;" // Hoang connstr
+  }
 }
 
