--- a/FDex.Infrastructure/FDex.Infrastructure.csproj
+++ b/FDex.Infrastructure/FDex.Infrastructure.csproj
@@ -8,11 +8,17 @@
 
   <ItemGroup>
     <None Remove="Mail\" />
+    <None Remove="Common\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Mail\" />
+    <Folder Include="Common\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FDex.Application\FDex.Application.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 </Project>
