datnd done add transaction and view all transaction

--- a/FDex.Api/appsettings.json
+++ b/FDex.Api/appsettings.json
@@ -11,9 +11,9 @@
     "Password": "mbcxfpyhbativytq"
   },
   "ConnectionStrings": {
-    "FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=Anhdat123;" // Dat connstr
-    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;" // Hung connstr
-    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;" // Hoang connstr
+    "FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=Anhdat123;TrustServerCertificate=True" // Dat connstr
+    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;TrustServerCertificate=True" // Hung connstr
+    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;TrustServerCertificate=True" // Hoang connstr
   }
 }
 
