--- a/FDex.Domain/FDex.Domain.csproj
+++ b/FDex.Domain/FDex.Domain.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <None Remove="Common\" />
+    <None Remove="Entities\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 </Project>
