--- a/FDex.Application/FDex.Application.csproj
+++ b/FDex.Application/FDex.Application.csproj
@@ -14,21 +14,17 @@
     <None Remove="Models\Infrastructure\" />
     <None Remove="Exceptions\" />
     <None Remove="Features\" />
-    <None Remove="Features\Transactions\" />
-    <None Remove="Features\Transactions\Requests\" />
-    <None Remove="Features\Transactions\Handlers\" />
-    <None Remove="Features\Transactions\Events\" />
-    <None Remove="Features\Transactions\Requests\Queries\" />
-    <None Remove="Features\Transactions\Handlers\Queries\" />
     <None Remove="Contracts\Persistence\" />
-    <None Remove="Features\Transactions\Handlers\Commands\" />
-    <None Remove="Features\Transactions\Requests\Commands\" />
     <None Remove="DTOs\" />
-    <None Remove="DTOs\Transaction\" />
     <None Remove="Responses\" />
-    <None Remove="Responses\Transaction\" />
     <None Remove="Responses\Common\" />
     <None Remove="Profiles\" />
+    <None Remove="DTOs\Swap\" />
+    <None Remove="Features\Swaps\" />
+    <None Remove="Responses\Swap\" />
+    <None Remove="Features\Swaps\Handlers\Commands\" />
+    <None Remove="Features\Swaps\Requests\Commands\" />
+    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Contracts\" />
@@ -38,21 +34,17 @@
     <Folder Include="Models\Infrastructure\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Features\" />
-    <Folder Include="Features\Transactions\" />
-    <Folder Include="Features\Transactions\Requests\" />
-    <Folder Include="Features\Transactions\Handlers\" />
-    <Folder Include="Features\Transactions\Events\" />
-    <Folder Include="Features\Transactions\Requests\Queries\" />
-    <Folder Include="Features\Transactions\Handlers\Queries\" />
     <Folder Include="Contracts\Persistence\" />
-    <Folder Include="Features\Transactions\Handlers\Commands\" />
-    <Folder Include="Features\Transactions\Requests\Commands\" />
     <Folder Include="DTOs\" />
-    <Folder Include="DTOs\Transaction\" />
     <Folder Include="Responses\" />
-    <Folder Include="Responses\Transaction\" />
     <Folder Include="Responses\Common\" />
     <Folder Include="Profiles\" />
+    <Folder Include="DTOs\Swap\" />
+    <Folder Include="Features\Swaps\" />
+    <Folder Include="Responses\Swap\" />
+    <Folder Include="Features\Swaps\Handlers\Commands\" />
+    <Folder Include="Features\Swaps\Requests\Commands\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FDex.Domain\FDex.Domain.csproj" />
@@ -64,5 +56,11 @@
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="System.Reactive.Linq" Version="6.0.0" />
+    <PackageReference Include="Nethereum.RPC.Reactive" Version="4.16.0" />
+    <PackageReference Include="Nethereum.JsonRpc.WebSocketClient" Version="4.16.0" />
+    <PackageReference Include="Nethereum.Parity.Reactive" Version="4.16.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 </Project>
