datnd subscriptions event and fix client services

--- a/FDex.Application/FDex.Application.csproj
+++ b/FDex.Application/FDex.Application.csproj
@@ -25,7 +25,6 @@
     <None Remove="Features\Swaps\Handlers\Commands\" />
     <None Remove="Features\Swaps\Requests\Commands\" />
     <None Remove="Services\" />
-    <None Remove="DTOs\AddLiquidity\" />
     <None Remove="Features\DashboardItems\" />
     <None Remove="Features\DashboardItems\Requests\" />
     <None Remove="Features\DashboardItems\Handlers\" />
@@ -33,6 +32,8 @@
     <None Remove="Features\DashboardItems\Requests\Queries\" />
     <None Remove="Features\DashboardItems\Requests\Commands\" />
     <None Remove="Features\DashboardItems\Handlers\Queries\" />
+    <None Remove="DTOs\Reporter\" />
+    <None Remove="DTOs\Liquidity\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Contracts\" />
@@ -53,7 +54,6 @@
     <Folder Include="Features\Swaps\Handlers\Commands\" />
     <Folder Include="Features\Swaps\Requests\Commands\" />
     <Folder Include="Services\" />
-    <Folder Include="DTOs\AddLiquidity\" />
     <Folder Include="Features\DashboardItems\" />
     <Folder Include="Features\DashboardItems\Requests\" />
     <Folder Include="Features\DashboardItems\Handlers\" />
@@ -61,6 +61,8 @@
     <Folder Include="Features\DashboardItems\Requests\Queries\" />
     <Folder Include="Features\DashboardItems\Requests\Commands\" />
     <Folder Include="Features\DashboardItems\Handlers\Queries\" />
+    <Folder Include="DTOs\Reporter\" />
+    <Folder Include="DTOs\Liquidity\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FDex.Domain\FDex.Domain.csproj" />
