--- a/FDex.Api/appsettings.json
+++ b/FDex.Api/appsettings.json
@@ -7,13 +7,11 @@
   },
   "AllowedHosts": "*",
   "Email": {
-    "Account": "datndw@gmail.com", //TODO: replace with offical email of FDex
-    "Password": "mbcxfpyhbativytq"
+    "Account": "fdex.dev@gmail.com",
+    "Password": "Fdex123456"
   },
   "ConnectionStrings": {
-    "FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=Fdex@123;TrustServerCertificate=True" // Dat connstr
-    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;TrustServerCertificate=True" // Hung connstr
-    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;TrustServerCertificate=True" // Hoang connstr
+    "FDexDB": "Server=localhost;database=master;uid=sa;password=Fdex@123;TrustServerCertificate=True"
   }
 }
 
