--- a/FDex.Api/appsettings.json
+++ b/FDex.Api/appsettings.json
@@ -11,7 +11,7 @@
     "Password": "Fdex123456"
   },
   "ConnectionStrings": {
-    "FDexDB": "Server=localhost;database=master;uid=sa;password=Fdex@123;TrustServerCertificate=True"
+    "FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=Fdex@123;TrustServerCertificate=True"
   }
 }
 
