datnd add event listener

--- a/FDex.Application/FDex.Application.csproj
+++ b/FDex.Application/FDex.Application.csproj
@@ -34,6 +34,14 @@
     <None Remove="Features\DashboardItems\Handlers\Queries\" />
     <None Remove="DTOs\Reporter\" />
     <None Remove="DTOs\Liquidity\" />
+    <None Remove="Enumerations\" />
+    <None Remove="Features\Reporters\" />
+    <None Remove="Features\Reporters\Handlers\" />
+    <None Remove="Features\Reporters\Requests\" />
+    <None Remove="Features\Reporters\Handlers\Commands\" />
+    <None Remove="Features\Reporters\Handlers\Queries\" />
+    <None Remove="Features\Reporters\Requests\Commands\" />
+    <None Remove="Features\Reporters\Requests\Queries\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Contracts\" />
@@ -63,6 +71,14 @@
     <Folder Include="Features\DashboardItems\Handlers\Queries\" />
     <Folder Include="DTOs\Reporter\" />
     <Folder Include="DTOs\Liquidity\" />
+    <Folder Include="Enumerations\" />
+    <Folder Include="Features\Reporters\" />
+    <Folder Include="Features\Reporters\Handlers\" />
+    <Folder Include="Features\Reporters\Requests\" />
+    <Folder Include="Features\Reporters\Handlers\Commands\" />
+    <Folder Include="Features\Reporters\Handlers\Queries\" />
+    <Folder Include="Features\Reporters\Requests\Commands\" />
+    <Folder Include="Features\Reporters\Requests\Queries\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FDex.Domain\FDex.Domain.csproj" />
