datnd switch application trigger instead of database trigger, update domain entities

--- a/FDex.Persistence/FDex.Persistence.csproj
+++ b/FDex.Persistence/FDex.Persistence.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\FDex.Application\FDex.Application.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.12" />
+    <PackageReference Include="EntityFrameworkCore.Triggered" Version="4.0.0-preview.1" />
   </ItemGroup>
 </Project>
