--- a/FDex.Api/appsettings.json
+++ b/FDex.Api/appsettings.json
@@ -11,9 +11,7 @@
     "Password": "mbcxfpyhbativytq"
   },
   "ConnectionStrings": {
-    "FDexDB": "Server=localhost,1433;database=FDexDB;uid=sa;password=Fdex@123;TrustServerCertificate=True" // Dat connstr
-    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;TrustServerCertificate=True" // Hung connstr
-    //"FDexDB": "Server=localhost;database=FDexDB;uid=sa;password=;TrustServerCertificate=True" // Hoang connstr
+    "FDexDB": "Server=localhost,1433;database=FDexDB;uid=sa;password=Anhdat123;TrustServerCertificate=True"
   }
 }
 
