--- a/FDex.Api/appsettings.json
+++ b/FDex.Api/appsettings.json
@@ -11,7 +11,7 @@
     "Password": "mbcxfpyhbativytq"
   },
   "ConnectionStrings": {
-    "FDexDB": "Server=localhost,1433;database=FDexDB;uid=sa;password=Anhdat123;TrustServerCertificate=True"
+    "FDexDB": "Server=ANPHATPC;database=FDexDB;uid=sa;password=hoang1234;TrustServerCertificate=True"
   }
 }
 
