--- a/FDex.Application/FDex.Application.csproj
+++ b/FDex.Application/FDex.Application.csproj
@@ -65,15 +65,13 @@
     <Folder Include="Contracts\" />
     <Folder Include="Common\" />
     <Folder Include="Contracts\Infrastructure\" />
+    <Folder Include="DTOs\Position\" />
     <Folder Include="Models\" />
     <Folder Include="Models\Infrastructure\" />
     <Folder Include="Exceptions\" />
-    <Folder Include="Features\" />
     <Folder Include="Contracts\Persistence\" />
-    <Folder Include="DTOs\" />
     <Folder Include="Responses\" />
     <Folder Include="Responses\Common\" />
-    <Folder Include="Profiles\" />
     <Folder Include="DTOs\Swap\" />
     <Folder Include="Features\Swaps\" />
     <Folder Include="Responses\Swap\" />
@@ -108,13 +106,8 @@
     <Folder Include="Features\Users\Handlers\Queries\" />
     <Folder Include="DTOs\TradingPosition\" />
     <Folder Include="Models\Application\" />
-    <Folder Include="Features\Positions\" />
-    <Folder Include="Features\Positions\Handlers\" />
-    <Folder Include="Features\Positions\Requests\" />
     <Folder Include="Features\Positions\Handlers\Commands\" />
     <Folder Include="Features\Positions\Requests\Commands\" />
-    <Folder Include="Features\Positions\Requests\Queries\" />
-    <Folder Include="Features\Positions\Handlers\Queries\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FDex.Domain\FDex.Domain.csproj" />
