--- a/FDex.Application/FDex.Application.csproj
+++ b/FDex.Application/FDex.Application.csproj
@@ -60,12 +60,12 @@
     <None Remove="Features\Positions\Requests\Commands\" />
     <None Remove="Features\Positions\Requests\Queries\" />
     <None Remove="Features\Positions\Handlers\Queries\" />
+    <None Remove="DTOs\User\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Contracts\" />
     <Folder Include="Common\" />
     <Folder Include="Contracts\Infrastructure\" />
-    <Folder Include="DTOs\Position\" />
     <Folder Include="Models\" />
     <Folder Include="Models\Infrastructure\" />
     <Folder Include="Exceptions\" />
@@ -108,6 +108,7 @@
     <Folder Include="Models\Application\" />
     <Folder Include="Features\Positions\Handlers\Commands\" />
     <Folder Include="Features\Positions\Requests\Commands\" />
+    <Folder Include="DTOs\User\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FDex.Domain\FDex.Domain.csproj" />
