--- a/FDex.Application/FDex.Application.csproj
+++ b/FDex.Application/FDex.Application.csproj
@@ -122,5 +122,6 @@
     <PackageReference Include="Nethereum.Parity.Reactive" Version="4.17.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Hangfire" Version="1.8.6" />
   </ItemGroup>
 </Project>
